css/styles.css
/*import google fonts for use*/
@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');

/*generic styles*/
body {
    padding: 0;
    margin: 0;
    background-color: #F1C40F;
    font-size: 1.8rem;
}

/*navbar, nav links*/
.navbar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 3;
}

body,
.navbar-brand {
    /*apply font to the body and the navbar brand link*/
    font-family: "caveat", sans-serif;
}

.navbar-brand {
    /*center on the vertical axis and move the brand link to the right by 40px*/
    margin-left: 40px;
    vertical-align: baseline;
    font-size: 1.6rem;
}

#navbarSupportedContent {
    vertical-align: baseline;
    align-items: center;
    justify-content: end;
}

.nav-item> .nav-link {
    /*reduce spacing within and apply spacing around the horizontal axis of the element*/
    padding: 0;
    margin: 0 10px;
    font-size: 1.6rem;
}

a .nav-link:hover {
    color: #6CB4EE;
}

.active {
    /*active class applies styles to current page being visited*/
    color: #000000;
    border-bottom: 2px solid #000000;
}

/*align content and size text on home page*/
.description-column {
    align-content: center;
}

#image-description,
#image-description-2 {
    /*apply margin to top and bottom of image description text on home page*/
    margin: 48px 0;
    font-size: 1em;
    text-align: justify;
}

/*images on home page*/
.img-fluid {
    width: 100%;
    height: auto;
}

/*bootstrap card*/
.card {
    background-color: #B8E1FF;
    border: 2px solid #6CB4EE;
}

.card .card-body h3 {
    font-family: "caveat", sans-serif;
    font-size: 1em;
}

.card .card-body .btn-info {
    font-family: "caveat", sans-serif;
    font-size: 16px;
    font-weight: bold;
}

header {
    background-color: burlywood;
    padding: 5px;
    display: flex;
}

.navbar-collapse {
    justify-content: center;
}

.call-to-action {
    font-size: 27px;
}

.cta-container {
    /*position button in the center of the section*/
    text-align: center;
}

footer {
    background-color: beige;

}

/*bootstrap grid*/
.row {
    /*background color for a smoother touch to the content and better visibility.*/
    background-color: #ffa9;
    padding: 30px 10px;
    row-gap: 30px;
}

.card {
    width: 19rem;/*card width matches the content width*/
    height: 19rem;
}

.card .card-img-top {
    min-height: 8em;
    min-width: 7em;
    max-height: 11.5em;
    object-fit: fill;/*fill the image container*/
}

.card-title {
    font-size: 16px;
    padding: 5px;
    margin: 5px;
    text-align: left;
}

.img-caption {
    background-color: aquamarine;
}

#footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 90px;
    background-color: #B8F2E6;
    display: flex;
    align-items: center;
}

.footer-links {
    width: 100%;
    text-align: center;
    text-decoration: none;
}

.footer-links:hover {
    cursor: pointer;
    color: aliceblue;
}

.play-sound {
    margin-left: 30px;
}

button[type=submit] {
    font-size: 30px;
}

.main-content {
    margin: 135px 0;
}

.nav-links:hover {
    color: #B8E1FF;
}

/*styles for the about page*/
#about {
    /*push the section down and center it*/
    margin: 135px 0;
    text-align: justify;
    font-size: 1.2rem;
}

/*soundbook page styles*/
audio {
    width: 100px;
    height: 45px;
}

.card-heading-container {
    /*container for the bootstrap card heading and the audio element*/
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.card-body {
    /*reduce padding to better accomodate the contents of the card body*/
    padding: 10px 0;
}

.hide-content {
    position: relative;
    top: 0;
    bottom: 0;
    right: 60px;
    background-color: aliceblue;
    border-radius: 20px;

}

/*center animal tiles horizontally along the columns for all breakpoints*/
.animal-tile-column {/*center animal tiles along the y axis in the bootstrap column*/
    display: flex;
    justify-content: center;
}

.animal-tile-row {
    border-radius: 10px;
}

.hide-content {/*apply background color to blend in span to hide part of audio element with audio element*/
    background-color: whitesmoke;
    width: 60px;
}

input[type=text]:valid {
    background-color: aquamarine;
}

#email:valid {
    background-color: aquamarine;
}

#message:valid {
    background-color: aquamarine;
}

input[type=text]:invalid {
    border: 2px solid red;
}

#email:invalid {
    border: 2px solid red;
}

#message:invalid {
    border: 2px solid red;
}

/*media queries to fix layout issues*/
@media screen and (max-width:992px) {/*media queries for screens of up to 992px*/
    /*media queries for the home page*/
    #image-description-2 {
        /*align the paragraph with the image*/
        margin-top: 90px;
    }

    /*align images to be spaced around the text*/
    .child-image1 {
        /*first image of the section in home page*/
        align-content: space-around;
    }

    .child-image2 {
        /*second image of the section in home page*/
        align-content: baseline;
    }

    #image-description {
        margin: 20px 0;
    }

    .call-to-action {/*resize cta button to add a more uniform look to the home page overall, and avoid distracting the user too much.*/
        font-size: 23px;
    }

    /*media queries for the soundbook page*/
    .hide-content {
        font-size: 25px;
        font-weight: 600;
    }

}

@media screen and (max-width:1200px) {/*media queries for screens of up to 1200px*/
    #image-description,
    #image-description-2 {
        font-size: 1.25rem;
    }
}

/*media queries for the soundbook page*/
@media screen and (min-width:992px) {/*media queries for screens of 992px and higher*/
    .card .card-img-top {
        min-height: 8em;
    }

    .hide-content {
        font-size: 25px;
        font-weight: 600;
    }


}

@media screen and (max-width: 575px) {
    .animal-tile-row {/*retain the original border edges on mobile devices up till the maximum width of 575px*/
        border-radius: 0;
    }
}

@media screen and (min-width:320px) and (max-width:768px) {/*media queries for mobile devices*/

    /*media queries for the home page*/
    #image-description,
    #image-description-2 {
        /*reduce gap between paragraph and heading text*/
        margin: 5px 0;
        font-size: 1.2rem;
        /*decrease font size of paragraphs for small and medium screens*/
    }

    .navbar-brand {
        margin-left: 10px;
    }

    .row {
        /*reduce row gap to bring content closer together for mobile screen viewing*/
        row-gap: 5px;
    }

    .nav-item {/*fit the nav items inside the nav element*/
        width: fit-content;
    }

    #navbarSupportedContent {
        background-color: aliceblue;
        margin-top: 5px;
    }

    .call-to-action {
        /*resize button for mobile screen viewing*/
        font-size: 20px;
    }

    .hide {/*hide the signup link on the footer on screen breakpoints of 768px and under*/
        display: none;
    }

    /*media query declarations for the about page*/
    #about {
        /*resize font for smaller screens*/
        font-size: 1.2rem;
    }

    /*media query declaration for the soundbook page*/
    .hide-content {
        /*style the text of span to hide part of audio controls for better viweability on mobile screens*/
        font-size: 23px;
        font-weight: 600;
    }

    /*fix card layout in mobile screens*/
    .card-img-top {/*resize card dimensions to fit inside row in mobile devices*/
        width: 9.3em;
        height: 9.5em;
    }

    .card {
        width: fit-content;/*readjust card width to fit content within border in screens of 320px width*/
    }

    

}

